First HTML build for main layout
no CSS yet

--- a/Module 2- A simple life/index.html
+++ b/Module 2- A simple life/index.html
@@ -19,5 +19,54 @@
                 </nav>
             </div> <!-- / .container -->
         </header>
+        <div class="container">
+            <main class="main-content">
+                <div class="featured-content"></div>
+                    <img src="img/life.jpg" alt="Minimalist desk setup with houseplant, lamp and wall clock" width="614">
+                    <p class="date-posted">July 23, 2019 | 3 comments</p>
+                    <h2 class="content-title">Finding simplicity in life</h2>
+                    <p class="content"><strong>Life can get complicated really quickly</strong>, but it doesn't have to be! There are many ways to simplify your life, <a href="#">a few of which we've explored in the past</a>. This week we're taking a bit of a approach though, in how you can find simplicity in the life you already living. continue reading</p>
+                    <p class="continue-reading">Continue reading</p>
+                <div class="content-block">
+                    <img src="img/food.jpg" alt="Plate of dumplings" width="198px">
+                    <p class="date-posted">July 19, 2019 | 3 comments</p>
+                    <h2 class="content-title">Keeping cooking simple </h2>
+                    <p class="content">Food is a very important part of everyone's life. If you want to be healthy, you have to eat healthy. One of the easiest ways to do that is to keep your cooking nice and simple. </p>
+                    <p class="continue-reading">Continue reading</p>
+                </div>
+                <div class="content-block">
+                    <img src="img/work.jpg" alt="White minimalist work station and chair" width="198px">
+                    <p class="date-posted">July 12, 2019 | 3 comments</p>
+                    <h2 class="content-title">Simplicity and work</h2>
+                    <p class="content">Work is often a major source of stress. People get frustrated, it ruins their relationship with others and it leads to burnout. By keeping your work life as simple as possible, it will help balance everything out.</p>
+                    <p class="continue-reading">Continue reading</p>
+                </div>
+                <div class="content-block">
+                    <img src="img/deco.jpg" alt="White minimalist work station and chair" width="198px">
+                    <p class="date-posted">July 3, 2019 | 3 comments</p>
+                    <h2 class="content-title">Simple decorations</h2>
+                    <p class="content">A home isn't a home until you've decorated a little. People either don't decorate, or they go overboard and it doesn't have the impact they were hoping for. Staying simple will help draw the eye where you want it to and make things pop like never before.</p>
+                    <p class="continue-reading">Continue reading</p>
+                </div>
+            </main>
+            <aside class="sidebar">
+                <div class="sidebar-content">
+                    <h2 class="sidebar-title">About Me</h2>
+                    <img src="img/about-me.jpg" alt="Man with red hair and outerwear laughing" width="150">
+                    <p class=about-me-content>I find life better, and I'm happier, when things are nice and simple.</p>
+                </div>    
+                <div class="sidebar-content">
+                    <h2 class="sidebar-title">Recent Posts</h2>
+                    <img src="img/food.jpg" alt="Plate of dumplings" width="150px">
+                    <p class="recent-post-content">Keeping cooking simple</p>
+                    <hr class="sidebar-break">
+                    <img src="img/work.jpg" alt="White minimalist work station and chair" width="150px">
+                    <p class="recent-post-content">Simplicity and work</p>
+                    <hr class="sidebar-break">
+                    <img src="img/deco.jpg" alt="White minimalist work station and chair" width="198px">
+                    <p class="recent-post-content">Simple decorations</p>
+                </div>
+            </aside>
+        </div>
     </body>
 </html>
